--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,12 @@
 {
-    "name": "contao/skeleton-bundle",
+    "name": "chuckki/contao-cook",
     "type": "symfony-bundle",
-    "description": "Skeleton for custom Contao 4 bundles",
-    "homepage": "https://contao.org",
-    "license": "LGPL-3.0-or-later",
+    "description": "Show aynthing for something",
+    "license": "MIT",
     "authors": [
         {
-            "name": "Leo Feyer",
-            "homepage": "https://github.com/leofeyer"
-        },
-        {
-            "name": "Contao Community",
-            "homepage": "https://contao.org/contributors"
+            "name": "Chuckki",
+            "homepage": "https://github.com/chuckki/contao-cook"
         }
     ],
     "require": {
