--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -5,7 +5,7 @@ This file is part of [package name].
 
 (c) John Doe
 
-@license LGPL-3.0-or-later
+@license MIT
 EOF;
 
 $finder = PhpCsFixer\Finder::create()
