--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "contao/core-bundle": "4.4.*",
+        "contao/core-bundle": "4.4.*"
     },
     "conflict": {
         "contao/core": "*",
@@ -24,5 +24,5 @@
         "psr-4": {
             "Chuckki\\ContaoCookBundle\\": "src/"
         }
-    },
+    }
 }
