--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,7 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
-        "contao/core-bundle": "4.4.*"
-    },
-    "conflict": {
-        "contao/core": "*",
-        "contao/manager-plugin": "<2.0 || >=3.0"
+        "php": "^5.6 || ^7.0"
     },
     "extra": {
         "contao-manager-plugin": "Chuckki\\ContaoCookBundle\\ContaoManager\\Plugin"
